<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <RadioGroup
    android:id="@+id/rg_new_trial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:layout_constraintTop_toTopOf="parent">
    <RadioButton
      android:id="@+id/radio_success"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/trial_success" />
    <RadioButton
      android:id="@+id/radio_fail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/trial_fail" />
  </RadioGroup>
  <EditText
    android:id="@+id/et_trial_entry_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:ems="10"
    android:importantForAutofill="no"
    android:inputType="number"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.3" />

  <LinearLayout
    android:id="@+id/ll_new_trial_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/guideline">
    <CheckBox
      android:id="@+id/cb_new_trial_location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/trial_record_location" />
    <Button
      android:id="@+id/btn_set_geolocation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/trial_set_location" />
  </LinearLayout>

  <Button
    android:id="@+id/btn_new_trial_submit"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/trial_submit_trial"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ll_new_trial_layout" />
  <Button
    android:id="@+id/btn_new_trial_reg_barcode"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/trial_register_barcode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_new_trial_submit" />
  <Button
    android:id="@+id/btn_new_trial_create_qrcode"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="Create QR Code"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_new_trial_reg_barcode" />
  <TextView
    android:id="@+id/text_new_trial_location"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/trial_loading_location"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_new_trial_reg_barcode" />

</androidx.constraintlayout.widget.ConstraintLayout>
