<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/tb_experiment_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.tabs.TabLayout
    android:id="@+id/tl_experiment_view"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.viewpager2.widget.ViewPager2
    android:id="@+id/pager_experiment_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tl_experiment_view"
    app:layout_constraintVertical_bias="0" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_view_add_trial"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:contentDescription="@string/fab_new_trial"
    android:onClick="fabNewTrial"
    android:src="@drawable/ic_baseline_add"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>