<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="16dp"
  android:orientation="vertical"
  tools:context=".view.MainActivity">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/tv_experiment_list_description"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ellipsize="end"
      android:singleLine="true"
      android:text="Volkswagen Beetles in Edmonton"
      android:textAppearance="@android:style/TextAppearance.Material.Headline"
      android:textSize="16sp" />
    <TextView
      android:id="@+id/tv_experiment_list_region"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Edmonton"
      android:textSize="14sp" />

  </LinearLayout>
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:orientation="vertical">
      <TextView
        android:id="@+id/tv_experiment_list_type"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Test1"
        android:textSize="14sp" />
      <TextView
        android:id="@+id/tv_experiment_list_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test2"
        android:textSize="14sp" />
    </LinearLayout>
    <ImageView
      android:id="@+id/iv_experiment_list_visible"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:src="@drawable/ic_baseline_visibility_off" />

  </RelativeLayout>

</LinearLayout>